fix align issue

--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,10 @@
     font-size: 24px;
     color: #0099FF;
   }
+  .Side_Menu  h2{
+	margin-left:70px;
+	  
+  }
 
   h3{
     font-size: 18px;
